creating drop-menu

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 <header>
   <h1>Beau's Bonbons</h1>
   <nav>
-    <ul>
+    <input type="checkbox" class="nav-check" id="nav-check">
+    <label class="nav-label" for="nav-check">Navigate</label>
+    <ul class="nav">
       <li><a class="col" href="#">Home</a></li>
       <li><a href="#">About</a></li>
       <li><a href="#">Products</a></li>
@@ -33,7 +35,10 @@
 <section class="about">
   <div class="body-about">
     <h2>About Us</h2>
-    <p>Welcome to Beau's Bonbons! We are a family owned business that prides ourselves in fresh, home made candy! We guarantee every piece will bring a smile to your face and back to your favourite childhood tastes! To learn more about our company and the faces behind it, <a href="#">click here for more information</a></p>
+    <p>Welcome to Beau's Bonbons! We are a family owned business that prides ourselves in fresh, home made candy! We guarantee every piece will bring a smile to your face and back to your favourite childhood tastes!</p>
+    <div>
+      <a class="btn" href="#">Learn More</a>
+    </div>
   </div>
   <ul class="people">
     <li class="card-one">
