added icon to header

--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 </head>
 <body>
 <header>
-  <h1>Beau's Bonbons</h1>
+  <div class="header-icons">
+    <img class="float-left"src="images-two/candy-icon.svg" alt="">
+    <h1>Beau's Bonbons</h1>
+  </div>
+
   <nav>
     <ul class="nav">
       <li><a class="col" href="#">Home</a></li>
@@ -30,6 +34,58 @@
     </div>
   </div>
 </header>
+
+<section class="products">
+  <ul class="prod-list">
+      <li class="prod-btn">
+        <a href="#"><img class="prod" src="images-two/sour.png" alt="">
+        <div class="btn-content">
+        <h3>Sour</h3>
+      </div>
+        </a>
+      </li>
+
+      <li class="prod-btn">
+        <a href="#"><img class="prod" src="images-two/gummies.png" alt="">
+        <div class="btn-content">
+        <h3>Gummies</h3>
+      </div>
+        </a>
+      </li>
+
+      <li class="prod-btn">
+        <a href="#"><img class="prod" src="images-two/candy.png" alt="">
+        <div class="btn-content">
+        <h3>Candy</h3>
+      </div>
+        </a>
+      </li>
+
+      <li class="prod-btn">
+        <a href="#"><img class="prod" src="images-two/cupcake.png" alt="">
+        <div class="btn-content">
+        <h3>Cupcakes</h3>
+      </div>
+        </a>
+      </li>
+
+      <li class="prod-btn">
+        <a href="#"><img class="prod" src="images-two/gum.png" alt="">
+        <div class="btn-content">
+        <h3>Gum</h3>
+      </div>
+        </a>
+      </li>
+
+      <li class="prod-btn">
+        <a href="#"><img class="prod" src="images-two/macaroon.png" alt="">
+        <div class="btn-content">
+        <h3>Macaroon</h3>
+      </div>
+        </a>
+      </li>
+  </ul>
+</section>
 <section class="about">
   <div class="body-about">
     <h2>About Us</h2>
@@ -65,57 +121,7 @@
   </ul>
 </section>
 
-  <section class="products">
-    <ul class="prod-list">
-        <li class="prod-btn">
-          <a href="#"><img class="prod" src="images-two/sour.png" alt="">
-          <div class="btn-content">
-          <h3>Sour</h3>
-        </div>
-          </a>
-        </li>
 
-        <li class="prod-btn">
-          <a href="#"><img class="prod" src="images-two/gummies.png" alt="">
-          <div class="btn-content">
-          <h3>Gummies</h3>
-        </div>
-          </a>
-        </li>
-
-        <li class="prod-btn">
-          <a href="#"><img class="prod" src="images-two/candy.png" alt="">
-          <div class="btn-content">
-          <h3>Candy</h3>
-        </div>
-          </a>
-        </li>
-
-        <li class="prod-btn">
-          <a href="#"><img class="prod" src="images-two/cupcake.png" alt="">
-          <div class="btn-content">
-          <h3>Cupcakes</h3>
-        </div>
-          </a>
-        </li>
-
-        <li class="prod-btn">
-          <a href="#"><img class="prod" src="images-two/gum.png" alt="">
-          <div class="btn-content">
-          <h3>Gum</h3>
-        </div>
-          </a>
-        </li>
-
-        <li class="prod-btn">
-          <a href="#"><img class="prod" src="images-two/macaroon.png" alt="">
-          <div class="btn-content">
-          <h3>Macaroon</h3>
-        </div>
-          </a>
-        </li>
-    </ul>
-</section>
 <section class="location">
   <div class="location-info">
     <figure class="location-fig">
