stylized location card
-added padding
-added box drop shadow
-changed body copy font

--- a/index.html
+++ b/index.html
@@ -123,7 +123,9 @@
 
 
 <section class="location">
+
   <div class="location-info">
+    <h2>Location</h2>
     <figure class="location-fig">
     <img class="img-store"src="images-two/store.jpg" alt=''>
     <figcaption>Beau's Bonbons. 123 Main Street, Ottawa, ON.</figcaption>
