stylized social media icons
-floated left
-text-aligned centre
-background color on footer

--- a/index.html
+++ b/index.html
@@ -137,6 +137,16 @@
 <section class="store">
   <a href="#"><h2>Shop Online Now!</h2></a>
 </section>
+<footer>
+  <p><small>Beau's Bonbonbs</small></p>
+  <ul class="social-media">
+    <li><a href="#"><img class="sm-icon" src="images-two/facebook-square.svg" alt=""></a></li>
+    <li><a href="#"><img class="sm-icon"src="images-two/twitter.svg" alt=""></a></li>
+    <li><a href="#"><img class="sm-icon"src="images-two/instagram.svg" alt=""></a></li>
+    <li><a href="#"><img class="sm-icon"src="images-two/youtube.svg" alt=""></a></li>
+    <li><a href="#"><img class="sm-icon"src="images-two/myspace-logo-square.svg" alt=""></a></li>
+  </ul>
+</footer>
 
 
 
