created bottom navigation
-added text color
-added hover option
-added transition to links

--- a/index.html
+++ b/index.html
@@ -137,8 +137,9 @@
 <section class="store">
   <a href="#"><h2>Shop Online Now!</h2></a>
 </section>
+
 <footer>
-  <p><small>Beau's Bonbonbs</small></p>
+
   <ul class="social-media">
     <li><a href="#"><img class="sm-icon" src="images-two/facebook-square.svg" alt=""></a></li>
     <li><a href="#"><img class="sm-icon"src="images-two/twitter.svg" alt=""></a></li>
@@ -146,7 +147,14 @@
     <li><a href="#"><img class="sm-icon"src="images-two/youtube.svg" alt=""></a></li>
     <li><a href="#"><img class="sm-icon"src="images-two/myspace-logo-square.svg" alt=""></a></li>
   </ul>
-
+  <ol class=btm-nav>
+    <li><a href="">About</a></li>
+    <li><a href="">Products</a></li>
+    <li><a href="">Location</a></li>
+    <li><a href="">Store</a></li>
+    <li><a href="">Contact</a></li>
+  </ol>
+  <p><small>Beau's Bonbonbs</small></p>
 </footer>
 
 
