fixed box sizes

--- a/index.html
+++ b/index.html
@@ -94,6 +94,8 @@
       <a class="btn" href="#">Learn More</a>
     </div>
   </div>
+</section>
+<section class="learn">
   <ul class="people">
     <li class="card-one">
       <img class="carl" src="images-two/carl.png" alt="">
@@ -136,6 +138,18 @@
 
 <section class="store">
   <a href="#"><h2>Shop Online Now!</h2></a>
+</section>
+
+<section class="reviews">
+  <ul class="review-card">
+    <li class="one">
+      <img class="carl" src="images-two/carl.png" alt="">
+      <div class="rev-body">
+      <p><strong>Joy</strong></p>
+      <p>This is my absolute favourite place to visit for my candy addiction! Everyone is so friendly and the candies are yummy!</p>
+      </div>
+    </li>
+  </ul
 </section>
 
 <footer>
