--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
   </div>
 </section>
 <section class="learn">
+  <h2>Meet the Team!</h2>
   <ul class="people">
     <li class="card-one">
       <img class="carl" src="images-two/carl.png" alt="">
