--- a/index.html
+++ b/index.html
@@ -144,9 +144,10 @@
 <section class="reviews">
   <ul class="review-card">
     <li class="one">
-      <img class="carl" src="images-two/carl.png" alt="">
-      <div class="rev-body">
+      <img class="joy" src="images-two/carl.png" alt="">
       <p><strong>Joy</strong></p>
+      <div class="rev-body">
+
       <p>This is my absolute favourite place to visit for my candy addiction! Everyone is so friendly and the candies are yummy!</p>
       </div>
     </li>
