--- a/index.html
+++ b/index.html
@@ -145,9 +145,9 @@
   <ul class="review-card">
     <li class="one">
       <img class="joy" src="images-two/carl.png" alt="">
-      <p><strong>Joy</strong></p>
-      <div class="rev-body">
 
+      <div class="rev-body">
+<p><strong>Joy</strong></p>
       <p>This is my absolute favourite place to visit for my candy addiction! Everyone is so friendly and the candies are yummy!</p>
       </div>
     </li>
@@ -170,7 +170,7 @@
     <li><a href="">Store</a></li>
     <li><a href="">Contact</a></li>
   </ol>
-  <p><small>Beau's Bonbonbs</small></p>
+  <p><small>Beau's Bonbons</small></p>
 </footer>
 
 
