added transitions to buttons

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 
   <div class="banner">
     <img class="img-flex" src="images-two/banner.svg" alt="">
-    <div class="banner-content">
+    <a><div class="banner-content">
       <h2>Eat More Candy</h2>
-      <p>Here at Beau's Bonbons, we believe no one is too old for candy!</p>
+      <p>Here at Beau's Bonbons, we believe no one is too old for candy!</p></a>
     </div>
   </div>
 </header>
