stylized ratings dialogue
-added image
-added margins
-float left

--- a/index.html
+++ b/index.html
@@ -144,11 +144,13 @@
 <section class="reviews">
   <ul class="review-card">
     <li class="one">
-      <img class="joy" src="images-two/carl.png" alt="">
-
+      <img class="joy" src="images-two/joy.png" alt="">
+      <div class="rev-head">
+      <strong>Joy</strong>
+      <img class="star" src="images-two/star-rating.svg" alt="">
+    </div>
       <div class="rev-body">
-<p><strong>Joy</strong></p>
-      <p>This is my absolute favourite place to visit for my candy addiction! Everyone is so friendly and the candies are yummy!</p>
+      <p>"This is my absolute favourite place to visit for my candy addiction! Everyone is so friendly and the candies are yummy!""</p>
       </div>
     </li>
   </ul
