created second review card for Anger

--- a/index.html
+++ b/index.html
@@ -150,7 +150,18 @@
       <img class="star" src="images-two/star-rating.svg" alt="">
     </div>
       <div class="rev-body">
-      <p>"This is my absolute favourite place to visit for my candy addiction! Everyone is so friendly and the candies are yummy!""</p>
+      <p>"This is my absolute favourite place to visit for my candy addiction! Everyone is so friendly and the candies are yummy!</p>
+      </div>
+    </li>
+
+    <li class="two">
+      <img class="joy" src="images-two/anger.png" alt="">
+      <div class="rev-head">
+      <strong>Anger</strong>
+      <img class="star" src="images-two/one-star.svg" alt="">
+    </div>
+      <div class="rev-body">
+      <p>"This place makes me so mad! Every one is always cheerful and it brings me down. I hate the happy feeling I get when I walk in - overall terrible!"</p>
       </div>
     </li>
   </ul
