--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
 </head>
 <body>
 <header>
-  <div class="header-icons">
-    <img class="float-left"src="images-two/candy-icon.svg" alt="">
-    <h1>Beau's Bonbons</h1>
-  </div>
 
   <nav>
+
+    <input type="checkbox" class="nav-check" id="nav-check">
+    <label class="nav-label" for ="nav-check">
+      <img src="images-two/drop-menu-icon.svg" alt="Open Navigation">
+    </label>
+    <h1>Beau's Bonbons</h1>
     <ul class="nav">
       <li><a class="col" href="#">Home</a></li>
       <li><a href="#">About</a></li>
