tried different things
-make banner text opacity 50%

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <label class="nav-label" for ="nav-check">
       <img src="images-two/drop-menu-icon.svg" alt="Open Navigation">
     </label>
+    <img class="float-left" src="images-two/candy-icon.svg" alt="">
+    <img class="float-right" src="images-two/candy-icon.svg" alt="">
     <h1>Beau's Bonbons</h1>
     <ul class="nav">
       <li><a class="col" href="#">Home</a></li>
