fixed 60em media query

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       <img class="carl" src="images-two/carl.png" alt="">
       <div class="card-body">
       <p><strong>Carl</strong><small>Owner</small></p>
-      <p>Carl is the owner and creator of Beau's Bonbons. He is passionate about great candy since his wife passed away. He is determined to bring her favourites to everyone.</p>
+      <p>Carl is the owner and creator of Beau's Bonbons. He is passionate about great candy since his wife passed away a few years ago. He is determined to bring her favourites to everyone.</p>
       </div>
     </li>
 
