fixing media query
-added section to reviews and css
-tried to centre review cards

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
     </li>
   </ul
 </section>
-
+<section class="footer">
 <footer>
 
   <ul class="social-media">
@@ -200,6 +200,7 @@
   </ol>
   <p><small>Beau's Bonbons</small></p>
 </footer>
+</section>
 
 
 
