changed html for location section

--- a/index.html
+++ b/index.html
@@ -131,14 +131,16 @@
 
 <section class="location">
 
-  <div class="location-info">
-    <h2>Location</h2>
-    <figure class="location-fig">
-    <img class="img-store"src="images-two/store.jpg" alt=''>
-    <figcaption>Beau's Bonbons. 123 Main Street, Ottawa, ON.</figcaption>
-  </figure>
-    <p>We are proud to anounce the grand opening of our first store! We have been working hard to bring this dream to life. We are located at a prime location downtown Ottawa and look forward to serving you in store!</p>
-  </div>
+      <div>
+        <img src="images-two/store.jpg" alt="">
+      </div>
+      <div>
+        <h2>Location</h2>
+        <p>We are proud to anounce the grand opening of our first store! We have been working hard to bring this dream to life. We are located at a prime location downtown Ottawa and look forward to serving you in store!</p>
+
+        <a class="btn" href="#">Visit Khufu</a>
+
+      </div>
 </section>
 
 <section class="store">
