--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 <header>
 
   <nav>
-
+    <h1>Beau's Bonbons</h1>
     <input type="checkbox" class="nav-check" id="nav-check">
     <label class="nav-label" for ="nav-check">
       <img src="images-two/drop-menu-icon.svg" alt="Open Navigation">
     </label>
     <img class="float-left" src="images-two/candy-icon.svg" alt="">
     <img class="float-right" src="images-two/candy-icon.svg" alt="">
-    <h1>Beau's Bonbons</h1>
+
     <ul class="nav">
       <li><a class="col" href="#">Home</a></li>
       <li><a href="#">About</a></li>
@@ -29,6 +29,7 @@
       <li><a href="#">Contact</a></li>
     </ul>
   </nav>
+  </header>
 
   <div class="banner">
     <img class="img-flex" src="images-two/banner.svg" alt="">
@@ -37,7 +38,7 @@
       <p>Here at Beau's Bonbons, we believe no one is too old for candy!</p></a>
     </div>
   </div>
-</header>
+
 
 <section class="products">
   <ul class="prod-list">
@@ -131,10 +132,10 @@
 
 <section class="location">
 
-      <div>
+
         <img src="images-two/store.jpg" alt="">
-      </div>
-      <div>
+
+      <div class-"location-text">
         <h2>Location</h2>
         <p>We are proud to anounce the grand opening of our first store! We have been working hard to bring this dream to life. We are located at a prime location downtown Ottawa and look forward to serving you in store!</p>
 
