centred words in buttons

--- a/index.html
+++ b/index.html
@@ -31,32 +31,33 @@
   </nav>
   </header>
 
-  <div class="banner">
+<section class="banner">
+  <div class="banner-body">
     <img class="img-flex" src="images-two/banner.svg" alt="">
     <a><div class="banner-content">
       <h2>Eat More Candy</h2>
       <p>Here at Beau's Bonbons, we believe no one is too old for candy!</p></a>
     </div>
   </div>
-
+</section>
 
 <section class="products">
   <ul class="prod-list">
-      <li class="prod-btn">
-        <a href="#"><img class="prod" src="images-two/sour.png" alt="">
-        <div class="btn-content">
-        <h3>Sour</h3>
-      </div>
-        </a>
-      </li>
+    <li class="prod-btn">
+      <a href="#"><img class="prod" src="images-two/sour.png" alt="">
+      <div class="btn-content">
+      <h3>Sour</h3>
+    </div>
+      </a>
+    </li>
 
-      <li class="prod-btn">
+    <li class="prod-btn">
+
         <a href="#"><img class="prod" src="images-two/gummies.png" alt="">
         <div class="btn-content">
-        <h3>Gummies</h3>
-      </div>
-        </a>
-      </li>
+          <h3>Gummies</h3>
+        </div></a>
+    </li>
 
       <li class="prod-btn">
         <a href="#"><img class="prod" src="images-two/candy.png" alt="">
@@ -91,6 +92,7 @@
       </li>
   </ul>
 </section>
+
 <section class="about">
   <div class="body-about">
     <h2>About Us</h2>
