fixed location text
-made it centre
-stylized button

--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
     </div>
   </div>
 </section>
+
 <section class="learn">
   <h2>Meet the Team!</h2>
   <ul class="people">
@@ -133,17 +134,15 @@
 
 
 <section class="location">
-
-
-        <img src="images-two/store.jpg" alt="">
-
-      <div class-"location-text">
-        <h2>Location</h2>
+  <div class="location-info">
+    <h2>Location</h2>
+      <div class="location-text">
+        <img class="img-store" src="images-two/store.jpg" alt="">
         <p>We are proud to anounce the grand opening of our first store! We have been working hard to bring this dream to life. We are located at a prime location downtown Ottawa and look forward to serving you in store!</p>
-
-        <a class="btn" href="#">Visit Khufu</a>
+        <a class="btn btn-location" href="#">Visit Beau's!</a>
 
       </div>
+    </div>
 </section>
 
 <section class="store">
