fixed review cards
-center align
-set max-width
-inline-block

--- a/index.html
+++ b/index.html
@@ -162,18 +162,18 @@
       </div>
     </li>
 
-    <li class="two">
+    <li class="one">
       <img class="joy" src="images-two/anger.png" alt="">
       <div class="rev-head">
       <strong>Anger</strong>
       <img class="star" src="images-two/one-star.svg" alt="">
     </div>
       <div class="rev-body">
-      <p>"This place makes me so mad! Every one is always cheerful and it brings me down. I hate the happy feeling I get when I walk in - overall terrible!"</p>
+      <p>"This place makes me so mad! Every one is always cheerful and it brings me down. I hate the happy feeling I get when I walk in."</p>
       </div>
     </li>
 
-    <li class="two">
+    <li class="one">
       <img class="joy" src="images-two/disgust.png" alt="">
       <div class="rev-head">
       <strong>Disgust</strong>
