fixed font sizes for candy buttons

--- a/index.html
+++ b/index.html
@@ -109,14 +109,14 @@
       <img class="carl" src="images-two/carl.png" alt="">
       <div class="card-body">
       <p><strong>Carl</strong><small>Owner</small></p>
-      <p>Carl is the owner and creator of Beau's Bonbons. He is passionate about great candy since his wife passed away a few years ago. He is determined to bring her favourites to everyone.</p>
+      <p>Carl is the owner and creator of Beau's Bonbons. He is passionate about great candy since his wife passed away. He is determined to bring her favourites to everyone.</p>
       </div>
     </li>
 
     <li class="card-one">
       <img class="carl" src="images-two/russel.png" alt="">
       <div class="card-body">
-      <p><strong>Russel</strong><small>Candy Creator</small></p>
+      <p><strong>Russel</strong><small> Creator</small></p>
       <p>Russel is one of Carl's very good friends. So when he heard about the new candy store venture he was all in! He is the best at making the candy and coming up with new flavours!</p>
       </div>
     </li>
@@ -180,8 +180,9 @@
       <p>"I guess I like this place. It's okay. Some of their stuff makes me feel bad though. Oh well. Maybe it's just me. Wouldn't recommend."</p>
       </div>
     </li>
-  </ul
+  </ul>
 </section>
+
 <section class="footer">
 <footer>
 
