Correct text in review cards

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
           <img class="carl" src="images-two/russel.png" alt="">
           <div class="card-body">
             <p><strong>Russel</strong><small> Creator</small></p>
-            <p>Russel is one of Carl's very good friends. So when he heard about the new candy store venture he was all in! He is the best at making the candy and coming up with new flavours!</p>
+            <p>Russel is one of Carl's good friends. So when he heard about the new candy store venture he was all in! He is the best at making candy and coming up with new flavours!</p>
           </div>
         </li>
 
